--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "avvvatars-react": "^0.4.2",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
