--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/three": "^0.169.0",
     "avvvatars-react": "^0.4.2",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
