--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
     "three": "^0.169.0"
   },
